--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Babylonica&family=Bebas+Neue&family=Grape+Nuts&family=Quicksand&family=Rubik+Glitch&family=Rubik+Moonrocks&display=swap');
 body{
-    background-image: url("./resources/bg.webp");
+    background-image: url("bg.webp");
 }
 header{
     font-family: "Bebas Neue";
